Added new URL for Config File

--- a/Configuration/Config.properties
+++ b/Configuration/Config.properties
@@ -1,4 +1,4 @@
-Url=http://www.shopclues.com/
+Url=https://development.web01.bareminerals.com
 
 IEPath=C:\\Users\\rishek.kumar\\Desktop\\JAVA\\IEDriverServer.exe
 
