Added US URL for Bareminerals

--- a/Configuration/Config.properties
+++ b/Configuration/Config.properties
@@ -1,4 +1,5 @@
-Url=https://development.web01.bareminerals.com/
+Url_US=https://development.web01.bareminerals.com/
+
 
 IEPath=C:\\Users\\rishek.kumar\\Desktop\\JAVA\\IEDriverServer.exe
 
